--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,65 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Create a batch, poll status, and download results in minutes"
 ---
 
-## Get started in three steps
+Objective: working end to end in under 10 minutes.
 
-Get your documentation site running locally and make your first customization.
+## Prerequisites
 
-### Step 1: Set up your local environment
+- API key
+- A folder of images
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+## Step 1: Create a batch
 
-### Step 2: Deploy your changes
+Use multipart form data to send images and optional metadata.
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+```bash
+curl -X POST https://api.yourdomain.com/v1/batches \\
+  -H "Authorization: Bearer $API_KEY" \\
+  -F "files[]=@images/site-1.jpg" \\
+  -F "files[]=@images/site-2.jpg" \\
+  -F 'metadata={"site":"field-a","date":"2024-05-01"}' \\
+  -F 'options={"output_formats":["csv"],"include_explanations":true}'
+```
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+**Recommended limits**
+- Max images per batch: 500
+- Max file size per image: 25 MB
+- Types: jpg, jpeg, png
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+The response is `202 Accepted` and returns `batch_id`.
 
-### Step 3: Go live
+## Step 2: Poll for status
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+```bash
+curl -X GET https://api.yourdomain.com/v1/batches/$BATCH_ID \\
+  -H "Authorization: Bearer $API_KEY"
+```
 
-## Next steps
+Terminal states: `succeeded`, `failed`, `cancelled`. Poll every 2–5 seconds for small batches and back off if you receive 429.
 
-Now that you have your docs running, explore these key features:
+## Step 3: Download results
 
-<CardGroup cols={2}>
+```bash
+curl -X GET "https://api.yourdomain.com/v1/batches/$BATCH_ID/results?format=csv" \\
+  -H "Authorization: Bearer $API_KEY" \\
+  -o results.csv
+```
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
+Use `format=xlsx` or `format=json` to change the output.
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
+## Expected output (CSV sample)
 
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
+```csv
+image_id,filename,problem_likely,severity,ignore,confidence
+img_01,site-1.jpg,true,high,false,0.92
+img_02,site-2.jpg,false,none,true,0.81
+img_03,site-3.jpg,true,medium,false,0.67
+```
 
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
+## Common quickstart pitfalls
 
-</CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+- 401: missing or invalid key
+- 413: request too large
+- 429: rate limited; slow down polling or creation rate
